Adjust agent jvm parameters (merge request !487)
Squash merge branch 'agent-start-sh' into 'internal-dev'
Adjust agent jvm parameters